Update GitHub Pages.

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
-<title>Strata</title>
-<link href="http://fonts.googleapis.com/css?family=ABeeZee|Inconsolata|Karla:400,700|Oxygen+Mono" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy">
+<title>Arguable</title>
+<!--
+<link href='http://fonts.googleapis.com/css?family=Parisienne|Oxygen+Mono|PT+Mono|Offside|Nova+Mono|Averia+Serif+Libre|Alex+Brush|Autour+One|Share+Tech+Mono|Merriweather|Maven+Pro|Raleway' rel='stylesheet' type='text/css'>
+-->
+<!-- todo: why doesn't fork me float? -->
+<link href="http://fonts.googleapis.com/css?family=Alex+Brush|Oxygen+Mono|Offside|Raleway:400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/syntax.css">
-<link rel="stylesheet" type="text/css" href="css/strata.css">
-<body><a href="https://github.com/bigeasy/strata/"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a><div class="container">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<body><a href="https://github.com/bigeasy/strata/"><img style="position: fixed; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a><div class="container">
 
 <div class="unit welcome">
-<h1>Strata</h1>
+<h1>Isochronous</h1>
 </div>
-
+<!-- todo: code font is too small for body text font -->
 <div class="unit description markdown">
 An Evented I/O B-tree for Node.js.
 
-The docs below are a work in progress; for now, [read the
-Docco](http://bigeasy.github.io/strata/strata.js.html).
-
-Read the [Docco](http://bigeasy.github.io/strata/strata.js.html)! Read the
-[Docco](http://bigeasy.github.io/strata/strata.js.html)! Read the
-[Docco](http://bigeasy.github.io/strata/strata.js.html)!
-
-## Purpose
+___
 
 Strata is part of a collection of database primitives that you can use to design
-your own distributed databases for your Node.js applications.
+your own distributed databases for your Node.js applications. I call this
+collection the Strata Universe. It culimates in Locket, a pure-JavaScript
+implementation of LevelDB.
 
 Strata is a **concurrent**, **b&#x2011;tree** **primitive**, in
 **pure-JavaScript** for Node.js.
@@ -35,60 +33,31 @@ organized in large pages on disk.
 
 By **concurrent** I mean that multiple queries can make progress on a descent of
 the b&#x2011;tree. Multiple reads can all navigate the b&#x2011;tree
-simultaneously, of course. Multiple reads can also make progress in the presence
-of a write, so long as they are not reading a page that is being written. This
-is the equivalence to "threading" in other database engines, but evented for
-Node.js.
+simultaneously. Multiple reads can also make progress in the presence of a
+write, so long as they are not reading a page that is being written. This is the
+equivalence to "threading" in other database engines, but evented for Node.js.
 
 Strata is a database **primitive**, it is not supposed to be used a as a general
-purpose database by it's lonesome, but an interface to a b&#x2011;tree and it's
-concepts that you can use to create different types database strategies.
-
-### Brace Yourself
-
-The interface to Strata is *not* an API, it is a programmer's interface to
-b&#x2011;tree concepts. It is easy to use, if you know how a b&#x2011;tree works,
-but please don't complain about encapsulation; it is not a database engine, it
-is a b&#x2011;tree structure and the *details are supposed to be exposed*.
-
-The Strata b&#x2011;tree interface describes a b&#x2011;tree as a collection of
-actors, not a collection of objects. A b&#x2011;tree isn't all about "pages."
-It's about descending, navigating, appending, and balancing a tree. When you
-read the code, you're going to find these people-named classes who do things.
-
-Finally, Strata is an ancient project of mine, that began before I really know
-how a Node.js library is supposed to look, so I used closure based objects,
-which is a way to go, but most noders use prototype based objects. That's what
-I'd do I was to do it all over again, or maybe not; because I like the way the
-code turned out.
-
-I'm going to cut this whinging in the final `README.md`. It's here to vent my
-defensiveness and remind of who my audience is; people who are experimenting
-with their own database structure for their own domain-specific database.
+purpose database by it's lonesome. Strata an implementation of a b&#x2011;tree
+and it's interface exposes b&#x2011;concepts. If you're using Strata you're
+either implementing a database engine, or your taking your indexes and queries
+into your own hands.
 
 ### A Note on Examples
 
-All of the examples below assume the following function.
+I use a control-flow library of my own creation called
+[Cadence](https://github.com/bigeasy/cadence) that I'm just crazy about.
 
-```javascript
-function validator (callback) {
-  return function (forward) {
-    return function (error) {
-      if (error) {
-        callback(error);
-      } else {
-        try {
-          forward.apply(null, __slice.call(arguments, 1));
-        } catch (error) {
-          callback(error);
-        }
-      }
-    }
-  }
-}
-```
+The primary benefit of Cadence it asynchronous try/catch error handling. This
+has made it very easy to create deeply nested asynchronous operations, yet have
+errors propagate up to the caller, the context that comes from maintaining a
+stack and unwinding it on error.
 
-TK: More about how that works. It's all over Strata.
+Secondary benefit is that Cadence always uses a trampoline. This allows me to
+cache aggressively without having to worry about blowing the stack.
+
+Finally, Cadence is pure-JavaScript and old fashioned JavaScript. It doesn't
+depend on language features that have yet to drop. No transpilers.
 
 ## Installing
 
@@ -100,7 +69,7 @@ npm install b-tree
 
 ## B-Tree Properties
 
-TK: Unique keys, but duplicate keys are super easy to fake with a simple recipe.
+*TK: Unique keys, but duplicate keys are super easy to fake.*
 
 ## Creating a B-Tree
 
@@ -109,31 +78,20 @@ branch pages as a count of child pages, and the size of the leaf pages as a
 count of stored records.
 
 ```javascript
-function openOrCreate (directory, callback) {
-  var check = validator(callback);
 
-  var strata = new Strata(directory, { leafSize: 1024, branchSize: 1024 });
-
-  fs.stat(directory, function (error, result) {
-    if (error.code == 'ENOENT') strata.create(check(done));
-    else strata.open(check(done));
-  })
-
-  function done () {
-    callback(null, strata);
-  }
-}
-
-openOrCreate('/home/alan/strata', function (error, strata) {
-  if (error) throw error;
-
-  // Do something with an open b&#x2011;tree...
-});
+var openOrCreate = cadence(function (async, directory) {
+    var strata = new Strata(directory, { leafSize: 1024, branchSize: 1024 });
+    async(function () {
+        strata.create(async())
+    }, function () {
+        strata.mutate()
+    })
+})
 ```
 
 Properties to the constructor...
 
-### `new Strata(location[, options])`.
+#### `new Strata(location[, options])`.
 
 Constructs a new b-tree that stores its files in the directory provided by
 `location`. It does not open or close the b&#x2011;tree.
@@ -152,11 +110,11 @@ following properties are accepted:
    function to validate each line in a leaf page, and the contents of a branch
    page.
 
-### `strata.open(callback)`
+#### `strata.open(callback)`
 
 Opens the b-tree.
 
-### `strata.open(callback)`
+#### `strata.create(callback)`
 
 Creates a new, empty b-tree. It will raise an exception if there is *anything*
 in the location directory.
@@ -171,22 +129,23 @@ With Strata you either create read-only iterator, or a read/write mutator. The
 mutator is a superset of the iterator so let's start there.
 
 ```javascript
-function hasKey (strata, sought, callback) {
-  var check = validator(callback), found;
-
-  strata.iterator(sought, check(atLeaf));
-
-  function atLeaf (cursor) {
-    found = cursor.index >= 0;
-    cursor.unlock();
-    callback(null, found);
-  }
+var hasKey = cadence(function (async, strata, sought) {
+    async(function () {
+        strata.iterator(sought, async())
+    }, function (cursor) {
+        found = cursor.index >= 0
+        async(function () {
+            cursor.unlock(async())
+        }, function () {
+            return true
+        })
+    })
 }
 
 hasKey(strata, 'c', function (error, exists) {
-  if (error) throw error;
-  if (exists) console.log('I found it.');
-});
+    if (error) throw error
+    if (exists) console.log('I found it.')
+})
 ```
 
 In the above, we create a read-only `Cursor` using the `Strata.iterator`
@@ -202,12 +161,12 @@ compliment is the index of where the record should go in the leaf page.
 In the `hasKey` function above we simply return whether or not the record exists
 based on the cursor index.
 
-### Scanning the B&#x2011;Tree
+### Scanning the B-Tree
+
+*Ed: The following is stupid wrong and stupid.*
 
 ```javascript
-function range (strata, start, stop, callback) {
-  var check = validator(callback), found = [];
-
+var range = cadence(function (async, strata, start, stop) {
   strata.iterator(start, check(atLeaf));
 
   function atLeaf (cursor) {
@@ -247,9 +206,12 @@ range(strata, 'c', 'i', function (error, found) {
   console.log(found);
 });
 ```
+<!-- todo: code font is too small for body text font -->
+<div class="unit description markdown">
 </div>
 
 </div></body>
+<!-- todo: move into an edify plugin -->
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
